--- a/0307HW.md
+++ b/0307HW.md
@@ -1,3 +1,5 @@
 #長庚大學資管系 大數據分析方法 作業二
 ##我很乖 我有交作業
 ##我很乖 我有在電腦安裝好軟體
+![GitHub](https://raw.githubusercontent.com/Hsuyuyan/0307HW/master/GitHub.png)
+![Rstudio](https://raw.githubusercontent.com/Hsuyuyan/0307HW/master/Rstudio.png)
