--- a/hw7.Rmd
+++ b/hw7.Rmd
@@ -3,46 +3,75 @@ title: "糖尿病 預測模型"
 output: github_document
 ---
 
-```{r setup, include=FALSE}
-
-```
-
 ## 資料前處理
-### 解釋資料
 
+###資料讀取
 
-This is an R Markdown format used for publishing markdown documents to GitHub. When you click the **Knit** button all R code chunks are run and a markdown file (.md) suitable for publishing to GitHub is generated.
+此資料來源為UCI Machine Learning Repository。
 
-### 把資料讀進來
-
-You can include R code in the document as follows:
+此資料記載一些因素來協助預測女性是否為糖尿病患者，一共有八個參數。另外，分類結果為二元分類，包括非糖尿病患者(neg)與糖尿病患者(pos) 。
 
 ```{r echo=TRUE}
-install.packages("mlbench")#此package內有很多dataset可練習
+library(mlbench)
+data(PimaIndiansDiabetes)
+str(PimaIndiansDiabetes) 
+```
 
-library(mlbench)#讀資料 糖尿病資料集
+###留下無缺值資料
 
-data(PimaIndiansDiabetes)#雙號
-
-str(PimaIndiansDiabetes)#diabetes:pos陽性/neg陰性
-
-#資料前處理
-PimaIndiansDiabetesC<-#雙號
-
-PimaIndiansDiabetes[complete.cases(PimaIndiansDiabetes),]#選資料完整的row
-
+```{r echo=TRUE}
+PimaIndiansDiabetesC<-
+    PimaIndiansDiabetes[complete.cases(PimaIndiansDiabetes),] 
 c(nrow(PimaIndiansDiabetes),nrow(PimaIndiansDiabetesC))
 ```
 
-## 分成訓練組跟測試組,並紀錄各組人數
+###將資料隨機分為訓練組與測試組
 
-隨機將2/3的資料分到訓練組（Test==F），剩下1/3為測試組（Test==T）
+隨機將2/3的資料分到訓練組（Test==F），剩下1/3為測試組（Test==T）且將有糖尿病症狀的人放在level1
 
-```{r pressure, echo=FALSE}
-PimaIndiansDiabetes$Test<-F 
-PimaIndiansDiabetes[sample(1:nrow(PimaIndiansDiabetes),nrow(PimaIndiansDiabetes)/3),]$Test<-T 
-c(sum(PimaIndiansDiabetes$Test==F),sum(PimaIndiansDiabetes$Test==T)) 
-
+```{r echo=TRUE}
+PimaIndiansDiabetesC$Test<-F 
+PimaIndiansDiabetesC[sample(1:nrow(PimaIndiansDiabetesC),nrow(PimaIndiansDiabetesC)/3),]$Test<-T
+PimaIndiansDiabetesC$diabetes<-factor(PimaIndiansDiabetesC$diabetes,levels=c("pos","neg"))
+c(sum(PimaIndiansDiabetesC$Test==F),sum(PimaIndiansDiabetesC$Test==T))
 ```
 
-可得訓練組案例數為'r sum(PimaIndiansDiabetes$Test==F)'，測試組案例數為'r sum(PimaIndiansDiabetes$Test==T)'
+可得訓練組案例數為`r sum(PimaIndiansDiabetesC$Test==F)`，測試組案例數為`r sum(PimaIndiansDiabetesC$Test==T)`
+
+## 預測模型建立
+
+###模型建立
+由於變數相當多，且多為連續變項，而且輸出為二元的類別變項，所以選擇邏輯迴歸演算法建立模型，並使用雙向逐步選擇最佳參數組合。
+
+```{r echo=TRUE}
+fit<-glm(diabetes~., PimaIndiansDiabetesC[PimaIndiansDiabetesC$Test==F,],family="binomial")
+library(MASS)
+finalFit<-stepAIC(fit,direction = "both",trace = F)
+summary(finalFit)$coefficients
+```
+
+### 模型挑選、說明
+
+由上述參數可知，以邏輯迴歸建立模型預測是否為糖尿病患者，經最佳化後，模型使用參數為`r rownames(summary(finalFit)$coefficient)[-1]`，共`r nrow(summary(finalFit)$coefficient)-1`個參數，各參數代表每一個可能影響的因素
+
+
+## 預測模型驗證
+```{r echo=TRUE}
+#install.packages('nloptr')
+
+DiabPred<-predict(finalFit,newdata = PimaIndiansDiabetesC[PimaIndiansDiabetesC$Test==T,])
+DiabAns<-ifelse(DiabPred<0.5,"pos","neg") 
+DiabAns<-factor(DiabAns,levels = c("pos","neg"))
+library(caret)
+sensitivity(DiabAns,PimaIndiansDiabetesC[PimaIndiansDiabetesC$Test==T,]$diabetes)
+specificity(DiabAns,PimaIndiansDiabetesC[PimaIndiansDiabetesC$Test==T,]$diabetes)
+posPredValue(DiabAns,PimaIndiansDiabetesC[PimaIndiansDiabetesC$Test==T,]$diabetes)
+negPredValue(DiabAns,PimaIndiansDiabetesC[PimaIndiansDiabetesC$Test==T,]$diabetes)
+```
+
+從不同女性得到的相關資料，經過邏輯回歸模型預測是否為糖尿病患者，可得：
+敏感度 `r round(sensitivity(DiabAns,PimaIndiansDiabetesC[PimaIndiansDiabetesC$Test==T,]$diabetes)*100,digit = 2)`%
+  特異性 `r round(specificity(DiabAns,PimaIndiansDiabetesC[PimaIndiansDiabetesC$Test==T,]$diabetes)*100,digit = 2)`%
+  陽性預測率 `r round(posPredValue(DiabAns,PimaIndiansDiabetesC[PimaIndiansDiabetesC$Test==T,]$diabetes)*100,digit = 2)`%
+  陰性預測率 `r round(negPredValue(DiabAns,PimaIndiansDiabetesC[PimaIndiansDiabetesC$Test==T,]$diabetes)*100,digit = 2)`%
+
